Add pry to Gemfile (development and test environment) Add controller spec for deleting task Add model spec for deleting task Add functionality to tasks controller and view to delete task

--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -3,5 +3,6 @@
   = f.button :submit, "Add"
 
 - @tasks.each do |task|
-  =task.description
+  = task.description
+  = button_to "delete", task, :method=>:delete
   %br
